backend/infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-keeper
  namespace: test
  labels:
    app: product-keeper
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-keeper
  template:
    metadata:
      labels:
        app: product-keeper
    spec:
      containers:
      - name: product-keeper
        image: cr.yandex/crp66p03h30r3ekibrbe/product-keeper:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: yc-registry-secret
